# wotb-calc

./: .gitignore  Cargo.toml  example.config.toml
.github/workflows/: release.yml
src/: gui.rs  main.rs  misc_funcs.rs  pathfinding.rs  tank_data.json  tank_data_types.rs
src/data_types/: data_info_types.rs  mod.rs  tank_data_types.rs
src/gui/: app.rs  components.rs  main_funcs.rs  mod.rs  wotb_app.rs
